# moss

./: .env.example
examples/cookbook/semantic-kernel/: README.md  demo_mock.py  moss_semantic_kernel.py  moss_sk_simple.py  pyproject.toml  test_moss_plugin.py  test_moss_semantic_kernel.py
sdks/python/sdk/src/moss/client/: moss_client.py
sdks/python/sdk/tests/: test_client.py
