[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moss-semantic-kernel"
version = "0.1.0"
description = "Semantic Kernel integration for Moss semantic search"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-2-Clause" }
authors = [
    { name = "InferEdge Inc.", email = "contact@moss.dev" }
]
dependencies = [
    "moss>=1.0.0b18",
    "semantic-kernel>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["moss_semantic_kernel.py"]

[tool.hatch.build.targets.sdist]
include = [
    "README.md",
    "moss_semantic_kernel.py",
]
