[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semantic-kernel-moss-cookbook"
version = "0.1.0"
description = "Moss semantic search cookbook for Semantic Kernel"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-2-Clause" }
authors = [
    { name = "InferEdge Inc.", email = "contact@moss.dev" }
]
dependencies = [
    "moss>=1.0.0",
    "semantic-kernel>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["moss_semantic_kernel.py"]

[tool.hatch.build.targets.sdist]
include = [
    "README.md",
    "moss_semantic_kernel.py",
]
